protox/src/parse/snapshots/protox__parse__tests__parse_enum-6.snap
---
source: src/parse/tests.rs
expression: "if parser.lexer.extras.errors.is_empty() {\n        Ok(result.unwrap())\n    } else { Err(parser.lexer.extras.errors) }"
---
Ok(
    Enum {
        name: Ident {
            value: "Foo",
            span: 5..8,
        },
        options: [],
        values: [
            EnumValue {
                name: Ident {
                    value: "BAR",
                    span: 11..14,
                },
                number: Int {
                    negative: false,
                    value: 0,
                    span: 17..18,
                },
                options: Some(
                    OptionList {
                        options: [
                            OptionBody {
                                name: [
                                    Ident(
                                        Ident {
                                            value: "opt",
                                            span: 20..23,
                                        },
                                    ),
                                ],
                                value: Float(
                                    Float {
                                        value: 0.5,
                                        span: 26..29,
                                    },
                                ),
                            },
                        ],
                        span: 19..30,
                    },
                ),
                comments: Comments {
                    leading_detached_comments: [],
                    leading_comment: None,
                    trailing_comment: None,
                },
                span: 11..31,
            },
        ],
        reserved: [],
        comments: Comments {
            leading_detached_comments: [],
            leading_comment: None,
            trailing_comment: None,
        },
        span: 0..33,
    },
)
