protox/src/parse/snapshots/protox__parse__tests__parse_extension-4.snap
---
source: src/parse/tests.rs
expression: "match parser.parse_extend() {\n    Ok(value) => Ok(value),\n    Err(()) => Err(parser.lexer.extras.errors),\n}"
---
Ok(
    Extend {
        extendee: TypeName {
            leading_dot: None,
            name: FullIdent {
                parts: [
                    Ident {
                        value: "Foo",
                        span: 7..10,
                    },
                    Ident {
                        value: "Foo",
                        span: 11..14,
                    },
                ],
            },
        },
        fields: [
            Field {
                label: Some(
                    (
                        Optional,
                        17..25,
                    ),
                ),
                name: Ident {
                    value: "bar",
                    span: 32..35,
                },
                kind: Normal {
                    ty: Int32,
                    ty_span: 26..31,
                },
                number: Int {
                    negative: false,
                    value: 126,
                    span: 38..41,
                },
                options: None,
                comments: Comments {
                    leading_detached_comments: [],
                    leading_comment: None,
                    trailing_comment: None,
                },
                span: 17..42,
            },
        ],
        comments: Comments {
            leading_detached_comments: [],
            leading_comment: None,
            trailing_comment: None,
        },
        span: 0..44,
    },
)
