protox/src/parse/snapshots/protox__parse__tests__parse_extension-5.snap
---
source: src/parse/tests.rs
expression: "match parser.parse_extend() {\n    Ok(value) => Ok(value),\n    Err(()) => Err(parser.lexer.extras.errors),\n}"
---
Ok(
    Extend {
        extendee: TypeName {
            leading_dot: Some(
                7..8,
            ),
            name: FullIdent {
                parts: [
                    Ident {
                        value: "Foo",
                        span: 8..11,
                    },
                ],
            },
        },
        fields: [
            Field {
                label: Some(
                    (
                        Optional,
                        14..22,
                    ),
                ),
                name: Ident {
                    value: "bar",
                    span: 29..32,
                },
                kind: Normal {
                    ty: Int32,
                    ty_span: 23..28,
                },
                number: Int {
                    negative: false,
                    value: 126,
                    span: 35..38,
                },
                options: None,
                comments: Comments {
                    leading_detached_comments: [],
                    leading_comment: None,
                    trailing_comment: None,
                },
                span: 14..39,
            },
            Field {
                label: Some(
                    (
                        Repeated,
                        40..48,
                    ),
                ),
                name: Ident {
                    value: "quz",
                    span: 56..59,
                },
                kind: Normal {
                    ty: String,
                    ty_span: 49..55,
                },
                number: Int {
                    negative: false,
                    value: 127,
                    span: 62..65,
                },
                options: None,
                comments: Comments {
                    leading_detached_comments: [],
                    leading_comment: None,
                    trailing_comment: None,
                },
                span: 40..66,
            },
        ],
        comments: Comments {
            leading_detached_comments: [],
            leading_comment: None,
            trailing_comment: None,
        },
        span: 0..68,
    },
)
