protox/src/parse/snapshots/protox__parse__tests__parse_field-15.snap
---
source: src/parse/tests.rs
expression: "if parser.lexer.extras.errors.is_empty() {\n        Ok(result.unwrap())\n    } else { Err(parser.lexer.extras.errors) }"
---
Ok(
    Field {
        label: None,
        name: Ident {
            value: "double",
            span: 7..13,
        },
        kind: Normal {
            ty: Double,
            ty_span: 0..6,
        },
        number: Int {
            negative: false,
            value: 1,
            span: 16..17,
        },
        options: Some(
            OptionList {
                options: [
                    OptionBody {
                        name: [
                            Ident(
                                Ident {
                                    value: "default",
                                    span: 19..26,
                                },
                            ),
                        ],
                        value: Ident {
                            negative: true,
                            ident: Ident {
                                value: "nan",
                                span: 30..33,
                            },
                            span: 29..33,
                        },
                    },
                ],
                span: 18..34,
            },
        ),
        comments: Comments {
            leading_detached_comments: [],
            leading_comment: None,
            trailing_comment: None,
        },
        span: 0..35,
    },
)
