protox/src/parse/snapshots/protox__parse__tests__parse_file-9.snap
---
source: src/parse/tests.rs
expression: "match parser.parse_file() {\n    Ok(value) => Ok(value),\n    Err(()) => Err(parser.lexer.extras.errors),\n}"
---
Err(
    [
        UnexpectedEof {
            expected: "';'",
        },
    ],
)
