protox/src/parse/snapshots/protox__parse__tests__parse_group-11.snap
---
source: src/parse/tests.rs
expression: "if parser.lexer.extras.errors.is_empty() {\n        Ok(result.unwrap())\n    } else { Err(parser.lexer.extras.errors) }"
---
Err(
    [
        UnexpectedToken {
            expected: "a message field, oneof, reserved range, enum, message, option or '}'",
            found: "]",
            span: 22..23,
        },
    ],
)
